<resources>
    <string name="app_name">MoneyBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_backup">BackUp</string>
    <string name="action_import">Import</string>
    <string name="action_msgParser">Message Parser</string>
    <string name="title_activity_analytics">Analytics</string>

    <string name="title_activity_graph">GraphActivity</string>
    <string name="dummy_button">Go To Full Screen</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_analytics_item_detail">AnalyticsItemDetail</string>
    <string name="shared_anim_analytics_item">shared_anim_analytics_item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_message_detail">MessageDetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Backup settings -->
    <string name="pref_header_general">Backup</string>

    <string name="pref_title_social_recommendations">Automatic Backup To Google Drive</string>
    <string name="pref_description_social_recommendations">Everything will be backup to Google Drive And a Local BackUp will be taken</string>

    <string name="pref_title_display_name">Google Account</string>
    <string name="pref_default_display_name"></string>

    <string name="pref_title_file_size_google_drive">Last Google Drive Backup Size</string>
    <string name="pref_def_title_file_size_google_drive">0 Bytes</string>

    <string name="pref_title_file_date_google_drive">Last Google Drive Backup Date</string>
    <string name="pref_def_title_file_date_google_drive"></string>

    <string name="pref_title_add_friends_to_messages">Backup Frequency</string>
    <string-array name="pref_backup_to_google_drive_list_titles">
        <item>6 Hour</item>
        <item>12 Hour</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="pref_backup_to_google_drive_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_display_theme_list_titles">
        <item>Default</item>
        <!--<item>Dark</item>-->
        <item>Red</item>
        <item>Blue</item>
        <item>Light Green</item>
        <item>Light Blue</item>
        <item>Yellow</item>
        <item>Black</item>
    </string-array>
    <string-array name="pref_diaplay_theme_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <!--<item>7</item>-->
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Lock</string>

    <string name="pref_title_lock_type">Lock Type</string>
    <string-array name="pref_lock_type_titles">
        <item>Pin Lock</item>
        <item>Smart Lock</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_lock_type_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="reports_switch_name">Reports</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="record_remainder_name">Smart Remainder</string>
    <string name="select_category">Category</string>
    <string name="select_payment_method">Payment Method</string>
    <string name="pref_def_title_local_backup">Local Backup Not Done \nClick To Make Local Backup</string>
    <string name="pref_title_local_backup_title">Local Backup</string>
    <string name="title_activity_re_payment">RePaymentActivity</string>
    <string name="action_auto_add">Auto Add</string>
    <string name="title_activity_auto_add">AutoAddActivity</string>
    <string name="record_msg_parser_name">Message Parser Records</string>
    <string name="record_msg_parser_des">Show the records parsed by Message Parser</string>
    <string name="pref_title_diplay_theme">Theme</string>
    <string name="pref_header_display">Display</string>
    <string name="shared_anim_reports_graph_item">shared_anim_reports_graph_item</string>
    <string name="shared_anim_budget_item">shared_anim_budget_item</string>
    <string name="shared_anim_analytics_item2">shared_anim_analytics_item2</string>
    <string name="shared_anim_cat_item">shared_anim_cat_item</string>
</resources>
