<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="backup_to_google_drive"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <EditTextPreference
        android:dependency="backup_to_google_drive"
        android:capitalize="words"
        android:enabled="false"
        android:inputType="textCapWords"
        android:key="EMAIL"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:dependency="backup_to_google_drive"
        android:capitalize="words"
        android:enabled="false"
        android:inputType="textCapWords"
        android:key="PREF_GOOGLE_DRIVE_BACKUP_FILE_SIZE"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:defaultValue="@string/pref_def_title_file_size_google_drive"
        android:singleLine="true"
        android:title="@string/pref_title_file_size_google_drive" />

    <EditTextPreference
        android:dependency="backup_to_google_drive"
        android:capitalize="words"
        android:defaultValue="@string/pref_def_title_file_date_google_drive"
        android:enabled="false"
        android:inputType="textCapWords"
        android:key="PREF_GOOGLE_DRIVE_BACKUP_FILE_DATE"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_file_date_google_drive" />

    <ListPreference
        android:dependency="backup_to_google_drive"
        android:defaultValue="3"
        android:entries="@array/pref_backup_to_google_drive_list_titles"
        android:entryValues="@array/pref_backup_to_google_drive_list_values"
        android:key="backup_frequency"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
