<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.allakumarreddy.moneybook.Activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_setings_backup"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.allakumarreddy.moneybook.Activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.allakumarreddy.moneybook.Activities.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_lock_screen"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
